# Linear-Regression

./: .gitmodules  CMakeLists.txt  README.md
include/: LRModel.h
src/: LRModel.cpp  LRModel.h  Main.cpp
tests/: Main.cpp
